<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/result_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:ems="10"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill,LabelFor" />
        <EditText
            android:id="@+id/message_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:ems="10"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>